{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "Cannon",
            "id": "9577f49e-4182-4ae4-88b5-25bf514818db",
            "actions": [
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "4d4dd961-4ee7-40cb-9601-4fd868266362",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "36149519-6531-4c7f-94c8-216a828ce615",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "0c5d2ebf-9a29-4096-90c8-bbfa8a2bc1fd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Positive",
                    "id": "456229ee-1d79-44f6-846e-c9891189e821",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "47f33ae7-6ab5-4bae-96b1-170a6a9cadb1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "gamepad",
                    "id": "a72380ef-066f-405b-8fc8-4e1eda9826ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "d54e1862-83f3-4ff4-92c0-bf14075e6fb7",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "6d681f10-780a-4a96-a7e4-f08b376fdce7",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4d4422d7-47f9-4b32-8e1d-9bfd442d3944",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2b022d1-16ad-4ec0-9c2c-f68188c1eedc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ScreenControls",
            "id": "3d1a12db-0006-42e9-978c-649e5eb18ef6",
            "actions": [
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "dcd18a05-3c0c-42d2-a82a-343d97920e6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edf6f30a-3dd0-40bb-a306-8558a4ed2a56",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80358024-aab5-467d-8f39-e8db7aa42208",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New Control Scheme",
            "bindingGroup": "New Control Scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}